syntax = "proto3";

package greet;

message Greeting {
	string firstName = 1;
	string lastName = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message GreetingManyTimesRequest {
	Greeting greeting = 1;
}

message GreetingManyTimesResponse {
	string result = 1;
}

message LongGreetRequest{
	Greeting greeting = 1;
}

message LongGreetResponse {
	string response = 1;
}

message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}

service GreetingService {
	//Unary
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	//Server Streaming
	rpc GreetManyTimes (GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse) {}

	// Streaming client
	rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {}

	// Bi-directional Streaming
	rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}
}